// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@hexatool/fs-crawl > should crawl custom directory > should crawl custom directory down > [async] should crawl custom directory down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory > should crawl custom directory down > [iterator] should crawl custom directory down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory > should crawl custom directory down > [stream] should crawl custom directory down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory > should crawl custom directory down > [sync] should crawl custom directory down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory with Dirent > should crawl custom directory with Dirent down > [async] should crawl custom directory with Dirent down 1`] = `
[
  Dirent {
    "name": ".eslintignore",
    Symbol(type): 1,
  },
  Dirent {
    "name": ".eslintrc.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": ".npmignore",
    Symbol(type): 1,
  },
  Dirent {
    "name": "CHANGELOG.md",
    Symbol(type): 1,
  },
  Dirent {
    "name": "LICENSE",
    Symbol(type): 1,
  },
  Dirent {
    "name": "README.md",
    Symbol(type): 1,
  },
  Dirent {
    "name": "node_modules",
    Symbol(type): 2,
  },
  Dirent {
    "name": "package.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": "spec",
    Symbol(type): 2,
  },
  Dirent {
    "name": "src",
    Symbol(type): 2,
  },
  Dirent {
    "name": "tsconfig.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": "vite.config.ts",
    Symbol(type): 1,
  },
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory with Dirent > should crawl custom directory with Dirent down > [iterator] should crawl custom directory with Dirent down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory with Dirent > should crawl custom directory with Dirent down > [stream] should crawl custom directory with Dirent down 1`] = `
[
  Dirent {
    "name": ".eslintignore",
    Symbol(type): 1,
  },
  Dirent {
    "name": ".eslintrc.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": ".npmignore",
    Symbol(type): 1,
  },
  Dirent {
    "name": "CHANGELOG.md",
    Symbol(type): 1,
  },
  Dirent {
    "name": "LICENSE",
    Symbol(type): 1,
  },
  Dirent {
    "name": "README.md",
    Symbol(type): 1,
  },
  Dirent {
    "name": "node_modules",
    Symbol(type): 2,
  },
  Dirent {
    "name": "package.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": "spec",
    Symbol(type): 2,
  },
  Dirent {
    "name": "src",
    Symbol(type): 2,
  },
  Dirent {
    "name": "tsconfig.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": "vite.config.ts",
    Symbol(type): 1,
  },
]
`;

exports[`@hexatool/fs-crawl > should crawl custom directory with Dirent > should crawl custom directory with Dirent down > [sync] should crawl custom directory with Dirent down 1`] = `
[
  Dirent {
    "name": ".eslintignore",
    Symbol(type): 1,
  },
  Dirent {
    "name": ".eslintrc.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": ".npmignore",
    Symbol(type): 1,
  },
  Dirent {
    "name": "CHANGELOG.md",
    Symbol(type): 1,
  },
  Dirent {
    "name": "LICENSE",
    Symbol(type): 1,
  },
  Dirent {
    "name": "README.md",
    Symbol(type): 1,
  },
  Dirent {
    "name": "node_modules",
    Symbol(type): 2,
  },
  Dirent {
    "name": "package.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": "spec",
    Symbol(type): 2,
  },
  Dirent {
    "name": "src",
    Symbol(type): 2,
  },
  Dirent {
    "name": "tsconfig.json",
    Symbol(type): 1,
  },
  Dirent {
    "name": "vite.config.ts",
    Symbol(type): 1,
  },
]
`;

exports[`@hexatool/fs-crawl > should exclude all directories > should exclude all directories down > [async] should exclude all directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude all directories > should exclude all directories down > [iterator] should exclude all directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude all directories > should exclude all directories down > [stream] should exclude all directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude all directories > should exclude all directories down > [sync] should exclude all directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude all files > should exclude all files down > [async] should exclude all files down 1`] = `
[
  "node_modules",
  "spec",
  "src",
]
`;

exports[`@hexatool/fs-crawl > should exclude all files > should exclude all files down > [iterator] should exclude all files down 1`] = `
[
  "node_modules",
  "spec",
  "src",
]
`;

exports[`@hexatool/fs-crawl > should exclude all files > should exclude all files down > [stream] should exclude all files down 1`] = `
[
  "node_modules",
  "spec",
  "src",
]
`;

exports[`@hexatool/fs-crawl > should exclude all files > should exclude all files down > [sync] should exclude all files down 1`] = `
[
  "node_modules",
  "spec",
  "src",
]
`;

exports[`@hexatool/fs-crawl > should exclude all folder and files > should exclude all folder and files down > [async] should exclude all folder and files down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude all folder and files > should exclude all folder and files down > [iterator] should exclude all folder and files down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude all folder and files > should exclude all folder and files down > [stream] should exclude all folder and files down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude all folder and files > should exclude all folder and files down > [sync] should exclude all folder and files down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude directories > should exclude directories down > [async] should exclude directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude directories > should exclude directories down > [iterator] should exclude directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude directories > should exclude directories down > [stream] should exclude directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude directories > should exclude directories down > [sync] should exclude directories down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude files > should exclude files down > [async] should exclude files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude files > should exclude files down > [iterator] should exclude files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude files > should exclude files down > [stream] should exclude files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude files > should exclude files down > [sync] should exclude files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder and files > should exclude folder and files down > [async] should exclude folder and files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder and files > should exclude folder and files down > [iterator] should exclude folder and files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder and files > should exclude folder and files down > [stream] should exclude folder and files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder and files > should exclude folder and files down > [sync] should exclude folder and files down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "tsconfig.json",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning false > should exclude folder with RegExp returning false down > [async] should exclude folder with RegExp returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning false > should exclude folder with RegExp returning false down > [iterator] should exclude folder with RegExp returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning false > should exclude folder with RegExp returning false down > [stream] should exclude folder with RegExp returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning false > should exclude folder with RegExp returning false down > [sync] should exclude folder with RegExp returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning true > should exclude folder with RegExp returning true down > [async] should exclude folder with RegExp returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning true > should exclude folder with RegExp returning true down > [iterator] should exclude folder with RegExp returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning true > should exclude folder with RegExp returning true down > [stream] should exclude folder with RegExp returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with RegExp returning true > should exclude folder with RegExp returning true down > [sync] should exclude folder with RegExp returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning false > should exclude folder with fn returning false down > [async] should exclude folder with fn returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning false > should exclude folder with fn returning false down > [iterator] should exclude folder with fn returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning false > should exclude folder with fn returning false down > [stream] should exclude folder with fn returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning false > should exclude folder with fn returning false down > [sync] should exclude folder with fn returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning true > should exclude folder with fn returning true down > [async] should exclude folder with fn returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning true > should exclude folder with fn returning true down > [iterator] should exclude folder with fn returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning true > should exclude folder with fn returning true down > [stream] should exclude folder with fn returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with fn returning true > should exclude folder with fn returning true down > [sync] should exclude folder with fn returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning false > should exclude folder with string returning false down > [async] should exclude folder with string returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning false > should exclude folder with string returning false down > [iterator] should exclude folder with string returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning false > should exclude folder with string returning false down > [stream] should exclude folder with string returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning false > should exclude folder with string returning false down > [sync] should exclude folder with string returning false down 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".npmignore",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "node_modules",
  "package.json",
  "spec",
  "src",
  "tsconfig.json",
  "vite.config.ts",
]
`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning true > should exclude folder with string returning true down > [async] should exclude folder with string returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning true > should exclude folder with string returning true down > [iterator] should exclude folder with string returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning true > should exclude folder with string returning true down > [stream] should exclude folder with string returning true down 1`] = `[]`;

exports[`@hexatool/fs-crawl > should exclude folder with string returning true > should exclude folder with string returning true down > [sync] should exclude folder with string returning true down 1`] = `[]`;
